syntax = "proto3";

package regsiterpb;

import "google/api/annotations.proto";

message RegisterUserRequest{
    string phone = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string password = 5;
    string role = 6;
}

message RegisterUserResponse{
    string message = 1;
    int32 code = 2;
    string access_token = 3;
}


service RegisterService{
    rpc RegisterUserService (RegisterUserRequest) returns (RegisterUserResponse){
        option (google.api.http) = {
            post: "/v1/user/register"
            body: "*"
		};
    }
}